# pyautotrace

./: .deepsource.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  zensical.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  ci.yaml  codeql.yaml  codeql.yml  docs.yaml  lint.yaml  publish-pypi.yaml  release.yaml  wheels.yaml
autotrace/: __init__.py  _autotrace.pxd  _autotrace.pyx  autotrace.py  overrides.cpp
docs/: cli.md  contributing.md  index.md  reference.md
docs/how-to/: bitmap-to-vector.md  encode-vector.md  eval-spline.md  index.md  save-vector.md
docs/overrides/partials/integrations/analytics/: custom.html
scripts/: build_linux.sh  build_unix.sh  build_windows.cmd  build_windows.ps1
src/autotrace/: __init__.py  __main__.py  _autotrace.pxd  _autotrace.pyx  autotrace.py
