[build-system]
requires = ["cython~=3.2.2", "setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyautotrace"
dynamic = ["version"]
description = "Python bindings for AutoTrace."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt", "LICENSE-autotrace.txt"]
requires-python = ">=3.10"
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
keywords = ["autotrace", "bitmap", "graphics", "tracing", "vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/lemonyte/pyautotrace"

[dependency-groups]
dev = [
    "cython~=3.2.2",
    "prek>=0.2.22",
    "setuptools>=61",
    "ty>=0.0.2",
]
test = [
    {include-group = "numpy"},
    "pillow~=12.0.0",
]
numpy = ["numpy>=2.2.6,<3.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
package-data = { autotrace = ["py.typed"] }

[tool.setuptools.dynamic]
version = { attr = "autotrace.__version__" }

[tool.cibuildwheel]
skip = "pp*"
archs = ["auto64"]
build-frontend = "build[uv]"
macos = { archs = ["universal2"] }

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D"]
