[project]
name = "pyautotrace"
version = "0.0.7"
description = "Python bindings for AutoTrace."
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE.txt", "LICENSE-autotrace.txt"]
requires-python = ">=3.10"
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
keywords = ["autotrace", "bitmap", "graphics", "tracing", "vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/lemonyte/pyautotrace"

[project.scripts]
pyautotrace = "autotrace.__main__:main"

[dependency-groups]
dev = [
    "cython~=3.2.2",
    "prek>=0.2.27",
    "setuptools>=61",
    "ty>=0.0.2",
    {include-group = "standard"},
]
standard = [
    "numpy>=2.2.6,<3.0.0",
    "pillow~=12.0.0",
]
test = [
    {include-group = "standard"},
]
docs = [
    "mkdocstrings-python~=2.0.1",
    "ruff>=0.14.9",
    "zensical>=0.0.15",
]

[build-system]
requires = ["cython~=3.2.2", "setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
package-data = { autotrace = ["py.typed"] }

[tool.cibuildwheel]
skip = "pp*"
archs = ["auto64"]
build-frontend = "build[uv]"
macos = { archs = ["universal2"] }

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D"]
