[project]
name = "pyautotrace"
version = "0.0.7"
description = "Python bindings for AutoTrace."
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE.txt", "LICENSE-autotrace.txt"]
requires-python = ">=3.10"
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
keywords = ["autotrace", "bitmap", "graphics", "tracing", "vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/lemonyte/pyautotrace"

[project.scripts]
pyautotrace = "autotrace.__main__:main"

[dependency-groups]
dev = [
    "cython~=3.2.5",
    "prek~=0.4.5",
    "setuptools~=82.0.1",
    {include-group = "standard"},
]
standard = [
    "numpy>=2.0.0,<3.0.0",
    "pillow>=12.2.0,<13.0.0",
]
test = [
    {include-group = "standard"},
]
docs = [
    "mkdocstrings-python~=2.0.4",
    "ruff~=0.15.17",
    "zensical~=0.0.45",
]

[build-system]
requires = ["cython~=3.2.5", "setuptools~=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
package-data = { autotrace = ["py.typed"] }

[tool.cibuildwheel]
skip = "pp*"
archs = ["auto64"]
build-frontend = "build[uv]"
macos = { archs = ["universal2"] }

[tool.ruff]
src = ["src"]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D"]
